Added function to go from a file to image, not functional.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.495321Z",
-     "start_time": "2023-05-14T17:03:33.251494Z"
+     "end_time": "2023-05-14T18:06:45.923448Z",
+     "start_time": "2023-05-14T18:06:43.621681Z"
     }
    },
    "outputs": [],
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.497269Z",
-     "start_time": "2023-05-14T17:03:33.256759Z"
+     "end_time": "2023-05-14T18:06:45.931225Z",
+     "start_time": "2023-05-14T18:06:45.926485Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.506999Z",
-     "start_time": "2023-05-14T17:03:33.278882Z"
+     "end_time": "2023-05-14T18:06:45.940086Z",
+     "start_time": "2023-05-14T18:06:45.937090Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.508066Z",
-     "start_time": "2023-05-14T17:03:33.289048Z"
+     "end_time": "2023-05-14T18:06:45.971882Z",
+     "start_time": "2023-05-14T18:06:45.947794Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.509470Z",
-     "start_time": "2023-05-14T17:03:33.297816Z"
+     "end_time": "2023-05-14T18:06:45.972754Z",
+     "start_time": "2023-05-14T18:06:45.960965Z"
     }
    },
    "outputs": [],
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.509801Z",
-     "start_time": "2023-05-14T17:03:33.305027Z"
+     "end_time": "2023-05-14T18:06:45.982232Z",
+     "start_time": "2023-05-14T18:06:45.977542Z"
     }
    },
    "outputs": [],
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.511211Z",
-     "start_time": "2023-05-14T17:03:33.313498Z"
+     "end_time": "2023-05-14T18:06:45.988418Z",
+     "start_time": "2023-05-14T18:06:45.982474Z"
     }
    },
    "outputs": [],
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.511494Z",
-     "start_time": "2023-05-14T17:03:33.322967Z"
+     "end_time": "2023-05-14T18:06:46.010697Z",
+     "start_time": "2023-05-14T18:06:45.995572Z"
     }
    },
    "outputs": [],
@@ -318,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.526142Z",
-     "start_time": "2023-05-14T17:03:33.329341Z"
+     "end_time": "2023-05-14T18:06:46.011146Z",
+     "start_time": "2023-05-14T18:06:46.004050Z"
     }
    },
    "outputs": [],
@@ -344,11 +344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.526625Z",
-     "start_time": "2023-05-14T17:03:33.338694Z"
+     "end_time": "2023-05-14T18:06:46.020310Z",
+     "start_time": "2023-05-14T18:06:46.015971Z"
     }
    },
    "outputs": [],
@@ -373,11 +373,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:33.528540Z",
-     "start_time": "2023-05-14T17:03:33.353573Z"
+     "end_time": "2023-05-14T18:06:46.026718Z",
+     "start_time": "2023-05-14T18:06:46.024031Z"
     }
    },
    "outputs": [],
@@ -407,11 +407,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:11:40.210721Z",
-     "start_time": "2023-05-14T17:11:40.199867Z"
+     "end_time": "2023-05-14T18:06:46.034156Z",
+     "start_time": "2023-05-14T18:06:46.030046Z"
     }
    },
    "outputs": [],
@@ -434,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:34.383272Z",
-     "start_time": "2023-05-14T17:03:33.401167Z"
+     "end_time": "2023-05-14T18:06:47.077766Z",
+     "start_time": "2023-05-14T18:06:46.038352Z"
     }
    },
    "outputs": [
@@ -446,7 +446,7 @@
      "data": {
       "text/plain": "<_io.TextIOWrapper name='fichier.txt' mode='w' encoding='UTF-8'>"
      },
-     "execution_count": 279,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,11 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:34.387215Z",
-     "start_time": "2023-05-14T17:03:34.384257Z"
+     "end_time": "2023-05-14T18:06:47.091187Z",
+     "start_time": "2023-05-14T18:06:47.088296Z"
     }
    },
    "outputs": [],
@@ -528,11 +528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:34.392331Z",
-     "start_time": "2023-05-14T17:03:34.390103Z"
+     "end_time": "2023-05-14T18:06:47.144306Z",
+     "start_time": "2023-05-14T18:06:47.096748Z"
     }
    },
    "outputs": [],
@@ -566,11 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:03:34.396458Z",
-     "start_time": "2023-05-14T17:03:34.392576Z"
+     "end_time": "2023-05-14T18:27:56.678155Z",
+     "start_time": "2023-05-14T18:27:56.676819Z"
     }
    },
    "outputs": [],
@@ -597,11 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T17:14:51.757176Z",
-     "start_time": "2023-05-14T17:14:21.477983Z"
+     "end_time": "2023-05-14T18:28:30.208712Z",
+     "start_time": "2023-05-14T18:28:04.388178Z"
     }
    },
    "outputs": [
@@ -612,8 +612,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [289], line 20\u001B[0m\n\u001B[1;32m     18\u001B[0m ecrire_fichier(test, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmode 0\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[0;32m---> 20\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [282], line 5\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m      3\u001B[0m ligne \u001B[38;5;241m=\u001B[39m f\u001B[38;5;241m.\u001B[39mreadlines()\n\u001B[1;32m      4\u001B[0m mode \u001B[38;5;241m=\u001B[39m ligne[\u001B[38;5;241m2\u001B[39m]\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m3\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRLE\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m      6\u001B[0m     rle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n",
+      "Cell \u001B[0;32mIn [19], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m mode_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mtransfo_fichier_image\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [18], line 17\u001B[0m, in \u001B[0;36mtransfo_fichier_image\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     15\u001B[0m image \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;28mlen\u001B[39m(ligne[\u001B[38;5;241m0\u001B[39m]), \u001B[38;5;28mlen\u001B[39m(ligne[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m]), \u001B[38;5;241m3\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39muint8)\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m4\u001B[39m,\u001B[38;5;241m7\u001B[39m):\n\u001B[0;32m---> 17\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(\u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m)):\n\u001B[1;32m     18\u001B[0m         image[i\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m4\u001B[39m][j][\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m=\u001B[39m ligne[i][j]\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m8\u001B[39m,\u001B[38;5;241m11\u001B[39m):\n",
       "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
@@ -649,7 +649,10 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-14T18:07:15.692463Z"
+    }
    }
   }
  ],
