ecriture des blocs + info fichier fait. Index out of range sur lire_fichier.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 275,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.923448Z",
-     "start_time": "2023-05-14T18:06:43.621681Z"
+     "end_time": "2023-05-18T16:05:43.717934Z",
+     "start_time": "2023-05-18T16:05:43.594826Z"
     }
    },
    "outputs": [],
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 276,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.931225Z",
-     "start_time": "2023-05-14T18:06:45.926485Z"
+     "end_time": "2023-05-18T16:05:43.720783Z",
+     "start_time": "2023-05-18T16:05:43.605466Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 277,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.940086Z",
-     "start_time": "2023-05-14T18:06:45.937090Z"
+     "end_time": "2023-05-18T16:05:43.721134Z",
+     "start_time": "2023-05-18T16:05:43.612615Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 278,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.971882Z",
-     "start_time": "2023-05-14T18:06:45.947794Z"
+     "end_time": "2023-05-18T16:05:43.721482Z",
+     "start_time": "2023-05-18T16:05:43.617094Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 279,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.972754Z",
-     "start_time": "2023-05-14T18:06:45.960965Z"
+     "end_time": "2023-05-18T16:05:43.721831Z",
+     "start_time": "2023-05-18T16:05:43.628411Z"
     }
    },
    "outputs": [],
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 280,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.982232Z",
-     "start_time": "2023-05-14T18:06:45.977542Z"
+     "end_time": "2023-05-18T16:05:43.722474Z",
+     "start_time": "2023-05-18T16:05:43.634469Z"
     }
    },
    "outputs": [],
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 281,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:45.988418Z",
-     "start_time": "2023-05-14T18:06:45.982474Z"
+     "end_time": "2023-05-18T16:05:43.722515Z",
+     "start_time": "2023-05-18T16:05:43.639589Z"
     }
    },
    "outputs": [],
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 282,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:46.010697Z",
-     "start_time": "2023-05-14T18:06:45.995572Z"
+     "end_time": "2023-05-18T16:05:43.722829Z",
+     "start_time": "2023-05-18T16:05:43.643666Z"
     }
    },
    "outputs": [],
@@ -288,6 +288,7 @@
     "    lignes = matrice.shape[0]\n",
     "    colonnes = matrice.shape[1]\n",
     "    blocs = []\n",
+    "    blocs.clear()\n",
     "    \n",
     "    # Parcours des indices de début de chaque bloc\n",
     "    for i in range(0, lignes, 8):\n",
@@ -318,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 283,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:46.011146Z",
-     "start_time": "2023-05-14T18:06:46.004050Z"
+     "end_time": "2023-05-18T16:05:43.723147Z",
+     "start_time": "2023-05-18T16:05:43.647401Z"
     }
    },
    "outputs": [],
@@ -344,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 284,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:46.020310Z",
-     "start_time": "2023-05-14T18:06:46.015971Z"
+     "end_time": "2023-05-18T16:05:43.723489Z",
+     "start_time": "2023-05-18T16:05:43.650840Z"
     }
    },
    "outputs": [],
@@ -373,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 285,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:46.026718Z",
-     "start_time": "2023-05-14T18:06:46.024031Z"
+     "end_time": "2023-05-18T16:05:43.723834Z",
+     "start_time": "2023-05-18T16:05:43.655292Z"
     }
    },
    "outputs": [],
@@ -407,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 286,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:46.034156Z",
-     "start_time": "2023-05-14T18:06:46.030046Z"
+     "end_time": "2023-05-18T16:05:43.724159Z",
+     "start_time": "2023-05-18T16:05:43.658438Z"
     }
    },
    "outputs": [],
@@ -434,39 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 287,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:47.077766Z",
-     "start_time": "2023-05-14T18:06:46.038352Z"
+     "end_time": "2023-05-18T16:05:44.467902Z",
+     "start_time": "2023-05-18T16:05:43.662212Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<_io.TextIOWrapper name='fichier.txt' mode='w' encoding='UTF-8'>"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ecrire_bloc(image):\n",
-    "    f = open(\"fichier.txt\", \"w\")\n",
-    "    for i in range(image.shape[0]):\n",
-    "        for j in range(image.shape[1]):\n",
-    "            f.write(str(image[i][j][0]))\n",
-    "    f.write(\"\\n\")\n",
-    "    for i in range(image.shape[0]):\n",
-    "        for j in range(image.shape[1]):\n",
-    "            f.write(str(image[i][j][1]))\n",
-    "    f.write(\"\\n\")\n",
-    "    for i in range(image.shape[0]):\n",
-    "        for j in range(image.shape[1]):\n",
-    "            f.write(str(image[i][j][2]))\n",
+    "    f = open(\"fichier.txt\", \"a\")\n",
+    "    for i in range(len(image)):\n",
+    "        for j in range(len(image[0])):\n",
+    "            for k in range(len(image[0][0])):\n",
+    "                f.write(str(image[i][j][k])+\" \")\n",
+    "            f.write(\"\\n\")\n",
     "    f.close()\n",
-    "    return f\n",
+    "    return\n",
     "\n",
     "test = load(\"test.png\")\n",
     "ecrire_bloc(test)"
@@ -482,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 288,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:47.091187Z",
-     "start_time": "2023-05-14T18:06:47.088296Z"
+     "end_time": "2023-05-18T16:05:44.472351Z",
+     "start_time": "2023-05-18T16:05:44.470025Z"
     }
    },
    "outputs": [],
@@ -528,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 289,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:06:47.144306Z",
-     "start_time": "2023-05-14T18:06:47.096748Z"
+     "end_time": "2023-05-18T16:05:44.477064Z",
+     "start_time": "2023-05-18T16:05:44.475428Z"
     }
    },
    "outputs": [],
@@ -566,25 +552,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 290,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:27:56.678155Z",
-     "start_time": "2023-05-14T18:27:56.676819Z"
+     "end_time": "2023-05-18T16:05:44.483881Z",
+     "start_time": "2023-05-18T16:05:44.481944Z"
     }
    },
    "outputs": [],
    "source": [
-    "def lire_fichier(fichier):\n",
+    "rle = False\n",
+    "def info_fichier(fichier):\n",
+    "    global rle\n",
     "    f = open(fichier, \"r\")\n",
     "    ligne = f.readlines()\n",
     "    mode = ligne[2]\n",
     "    if ligne[3] == \"RLE\":\n",
     "        rle = True\n",
-    "    else:\n",
+    "    elif ligne[3] == \"NORLE\":\n",
     "        rle = False\n",
     "    f.close()\n",
-    "    return mode, rle"
+    "    return mode, rle\n",
+    "\n",
+    "def decode_RLE(liste_bloc):\n",
+    "   for i in range(len(liste_bloc)):\n",
+    "       for j in range(len(liste_bloc[0])):\n",
+    "           for k in range(len(liste_bloc[0][0])):\n",
+    "               for l in range(len(liste_bloc[0][0][0])):\n",
+    "                   if liste_bloc[i][j][k][l] == \"#\":\n",
+    "                       liste_bloc[i][j][k][l] = 0\n",
+    "                   elif liste_bloc[i][j][k][l][0] == \"#\":\n",
+    "                       liste_bloc[i][j][k][l] = liste_bloc[i][j][k][l][1:]\n",
+    "   return liste_bloc\n",
+    "\n",
+    "\n",
+    "def lire_fichier(fichier):\n",
+    "    #creer les listes de blocs décrites par le fichier\n",
+    "    mode, rle = info_fichier(fichier)\n",
+    "    f = open(fichier, \"r\")\n",
+    "    ligne = f.readlines()\n",
+    "    liste_bloc = []\n",
+    "    liste_bloc.clear()\n",
+    "    for i in range(4,7):\n",
+    "        liste_bloc.append(ligne[i-1])\n",
+    "    if rle:\n",
+    "        liste_bloc = decode_RLE(liste_bloc)\n",
+    "    liste_bloc = decompress(liste_bloc)\n",
+    "    return liste_bloc"
    ]
   },
   {
@@ -597,11 +611,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 291,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T18:28:30.208712Z",
-     "start_time": "2023-05-14T18:28:04.388178Z"
+     "end_time": "2023-05-18T16:06:01.173180Z",
+     "start_time": "2023-05-18T16:05:44.485653Z"
     }
    },
    "outputs": [
@@ -612,8 +626,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [19], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m mode_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mtransfo_fichier_image\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [18], line 17\u001B[0m, in \u001B[0;36mtransfo_fichier_image\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     15\u001B[0m image \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;28mlen\u001B[39m(ligne[\u001B[38;5;241m0\u001B[39m]), \u001B[38;5;28mlen\u001B[39m(ligne[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m]), \u001B[38;5;241m3\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39muint8)\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m4\u001B[39m,\u001B[38;5;241m7\u001B[39m):\n\u001B[0;32m---> 17\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(\u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m)):\n\u001B[1;32m     18\u001B[0m         image[i\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m4\u001B[39m][j][\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m=\u001B[39m ligne[i][j]\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m8\u001B[39m,\u001B[38;5;241m11\u001B[39m):\n",
+      "Cell \u001B[0;32mIn [291], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;66;03m#ecrire_bloc(test)\u001B[39;00m\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [290], line 34\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     32\u001B[0m liste_bloc\u001B[38;5;241m.\u001B[39mclear()\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m4\u001B[39m,\u001B[38;5;241m7\u001B[39m):\n\u001B[0;32m---> 34\u001B[0m     liste_bloc\u001B[38;5;241m.\u001B[39mappend(\u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m rle:\n\u001B[1;32m     36\u001B[0m     liste_bloc \u001B[38;5;241m=\u001B[39m decode_RLE(liste_bloc)\n",
       "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
@@ -637,7 +651,8 @@
     "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
     "mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
     "ecrire_fichier(test, \"mode 0\")\n",
-    "ecrire_bloc(test)\n",
+    "#ecrire_bloc(test)\n",
+    "info_fichier(\"fichier.txt\")\n",
     "lire_fichier(\"fichier.txt\")\n",
     "#Image.fromarray(mode_0,'RGB').show()\n",
     "#Image.fromarray(mode_1,'RGB').show()"
@@ -649,10 +664,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-14T18:07:15.692463Z"
-    }
+    "collapsed": false
    }
   }
  ],
