--- a/projet.ipynb
+++ b/projet.ipynb
@@ -594,7 +594,7 @@
     "    liste_bloc = []\n",
     "    liste_bloc.clear()\n",
     "    for i in range(4,7):\n",
-    "        liste_bloc.append(ligne[i-1])\n",
+    "        liste_bloc.append(ligne[i])\n",
     "    if rle:\n",
     "        liste_bloc = decode_RLE(liste_bloc)\n",
     "    liste_bloc = decompress(liste_bloc)\n",
